--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,48 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1821dbca-d678-4718-9299-0f4c734242e7",
+   "execution_count": 1,
+   "id": "c8139555-1ac1-4e13-ae8c-6bc2617b1162",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "from openai import OpenAI"
+    "import requests \n",
+    "\n",
+    "docs_url = 'https://github.com/DataTalksClub/llm-zoomcamp/blob/main/01-intro/documents.json?raw=1'\n",
+    "docs_response = requests.get(docs_url)\n",
+    "documents_raw = docs_response.json()\n",
+    "\n",
+    "documents = []\n",
+    "\n",
+    "for course in documents_raw:\n",
+    "    course_name = course['course']\n",
+    "\n",
+    "    for doc in course['documents']:\n",
+    "        doc['course'] = course_name\n",
+    "        documents.append(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1509f955-988b-419a-9267-ac82430cb20d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = OpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f55a1841-6b02-4ca9-86ec-1b47bf661722",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = client.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
-    "    messages=[{\"role\": \"user\", \"content\": \"Is it too late to join a course\"}]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e10f2302-183d-4b58-9417-6d5c1c3556e9",
+   "execution_count": 3,
+   "id": "0db5b93d-168d-4ad7-9ca6-58dceb57258b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Whether it\\'s \"too late\" to join a course highly depends on several factors, including the type of course, its schedule, the institution offering it, and its specific policies. Here are some points to consider:\\n\\n1. **Course Duration and Start Date**:\\n   - If the course just started, you might still be able to join without falling too far behind.\\n   - If it’s already several weeks in, catching up might be more challenging.\\n\\n2. **Enrollment Policies**:\\n   - Different institutions have different add/drop deadlines.\\n   - Some might allow late enrollment with the instructor’s permission.\\n\\n3. **Course Type**:\\n   - For self-paced online courses, you can usually start at any time.\\n   - For structured, synchronous courses (whether online or in-person), joining late could be more difficult.\\n\\n4. **Course Load and Prerequisites**:\\n   - Consider whether you can quickly catch up on missed content and whether you have the necessary background knowledge.\\n\\n5. **Instructor’s Policy**:\\n   - You may need to get approval from the instructor. They can provide guidance on whether you’ll be able to meet the requirements.\\n\\n6. **Logistical Considerations**:\\n   - If the course involves group work, lab sessions, or other hands-on activities, late entry might pose additional challenges.\\n\\nHere are some steps you can take to find out if you can still join:\\n\\n1. **Contact the Instructor**: Ask if it\\'s feasible for you to catch up.\\n2. **Check with the Registrar**: They can inform you about the official policies and deadlines.\\n3. **Evaluate the Syllabus**: Look at the syllabus to understand what you’ve missed and assess your ability to catch up.\\n\\nIf all else fails, keep an eye out for future offerings of the course or similar courses. Many institutions offer the same courses in sequential terms or have alternative options available.'"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-faq-hw'})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
+    "es_client = Elasticsearch('http://localhost:9200')\n",
+    "\n",
+    "index_settings = {\n",
+    "    \"settings\": {\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    },\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"} \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "index_name = \"course-faq-hw\"\n",
+    "\n",
+    "es_client.indices.create(index=index_name, body=index_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "15af498b-d66b-46a7-97f8-ec3da388e051",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.10.13/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:28<00:00, 33.11it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "for doc in tqdm(documents):\n",
+    "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f6c6a01a-1138-4b51-97fc-2259868e3fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"How do I execute a command in a running docker container?\"\n",
+    "search_query = {\n",
+    "    \"size\": 1,\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": query,\n",
+    "                    \"fields\": [\"question^4\", \"text\"],\n",
+    "                    \"type\": \"best_fields\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "response = es_client.search(index=index_name, body=search_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f91a8e04-3487-471a-8760-aa86b5191e76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'took': 621, 'timed_out': False, '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 865, 'relation': 'eq'}, 'max_score': 84.050095, 'hits': [{'_index': 'course-faq-hw', '_id': 'ivG4S5ABZNvh8RxO8UP_', '_score': 84.050095, '_source': {'text': 'Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\\ndocker run -it --entrypoint bash <image>\\nIf the container is already running, execute a command in the specific container:\\ndocker ps (find the container-id)\\ndocker exec -it <container-id> bash\\n(Marcos MJD)', 'section': '5. Deploying Machine Learning Models', 'question': 'How do I debug a docker container?', 'course': 'machine-learning-zoomcamp'}}]}})"
       ]
      },
      "execution_count": 8,
@@ -52,13 +131,210 @@
     }
    ],
    "source": [
-    "response.choices[0].message.content"
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dfc3ae7f-c204-42ff-b24c-59906d629c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_query = {\n",
+    "    \"size\": 3,\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": query,\n",
+    "                    \"fields\": [\"question^4\", \"text\"],\n",
+    "                    \"type\": \"best_fields\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\n",
+    "                \"term\": {\n",
+    "                    \"course\": \"machine-learning-zoomcamp\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "response = es_client.search(index=index_name, body=search_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f45aadeb-e1c1-4fab-ab09-1d23b3b4200f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_index': 'course-faq-hw',\n",
+       " '_id': 'qvG4S5ABZNvh8RxO9UOv',\n",
+       " '_score': 49.938507,\n",
+       " '_source': {'text': 'You can copy files from your local machine into a Docker container using the docker cp command. Here\\'s how to do it:\\nIn the Dockerfile, you can provide the folder containing the files that you want to copy over. The basic syntax is as follows:\\nCOPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tGopakumar Gopinathan',\n",
+       "  'section': '5. Deploying Machine Learning Models',\n",
+       "  'question': 'How do I copy files from a different folder into docker container’s working directory?',\n",
+       "  'course': 'machine-learning-zoomcamp'}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response['hits']['hits'][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2ed9f8ef-dd1c-482c-8dc0-efc2db20c365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = []\n",
+    "for hit in response['hits']['hits']:\n",
+    "    documents.append(hit['_source'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "114ca867-9e3e-4914-9f3e-01c37ada0eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT:\n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "    \n",
+    "    context = f\"\"\n",
+    "\n",
+    "    for doc in search_results:\n",
+    "        context += f\"Q: {doc['question']}\\n\"\n",
+    "        context += f\"A: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context)\n",
+    "\n",
+    "    return prompt.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a3ff17b0-5bb2-448a-9dc2-600bf0132fbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = build_prompt(query, documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0babcd05-1569-4c41-9980-a94c88c629f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1462"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2e245c95-4755-4084-9eec-9ec5e039c366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tiktoken\n",
+      "  Downloading tiktoken-0.7.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.6 kB)\n",
+      "Collecting regex>=2022.1.18 (from tiktoken)\n",
+      "  Downloading regex-2024.5.15-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.9/40.9 kB\u001b[0m \u001b[31m823.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.26.0 in /home/codespace/.local/lib/python3.10/site-packages (from tiktoken) (2.32.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.10/site-packages (from requests>=2.26.0->tiktoken) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.10/site-packages (from requests>=2.26.0->tiktoken) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/python/3.10.13/lib/python3.10/site-packages (from requests>=2.26.0->tiktoken) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.10/site-packages (from requests>=2.26.0->tiktoken) (2024.2.2)\n",
+      "Downloading tiktoken-0.7.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading regex-2024.5.15-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (775 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m775.1/775.1 kB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: regex, tiktoken\n",
+      "Successfully installed regex-2024.5.15 tiktoken-0.7.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "37be7b8e-8a93-4a51-801f-5759b83eeff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "encoding = tiktoken.encoding_for_model(\"gpt-4o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "53b9bfe7-859e-4d17-a110-9177cc4bed72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "322"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(encoding.encode(prompt))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2014286b-7697-4710-b73b-817a7b92c7b8",
+   "id": "7641720f-50fa-4211-a5f7-f876759c99f4",
    "metadata": {},
    "outputs": [],
    "source": []
